--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 <body>
     {% if name %}
     <h1>Hello, {{ name }}</h1>
+    <a href="/logout">Log out</a>
     {% else %}
     <h1> You are not logged in</h1>
     <a href="/login">Log In</a>
